# crypto-trade

./: .gitignore  LICENSE  README.md  format.sh  lint.sh  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: format_lint.yml  release.yml  test.yml
applications/: market_making.py
examples/: backtest.py  download_historical_data.py  quick_start.py
examples/sample_data/: data.csv
hooks/: pre-commit
src/crypto_trade/: exchange_api.py  utility.py
src/crypto_trade/exchanges/: binance.py  bybit.py  hyperliquid.py  okx.py
src/crypto_trade/exchanges/delegates/: binance_base.py  binance_futures_base.py  binance_usds_margined_futures.py
tests/: test_exchange.py  test_orjson.py  test_start_stop.py  test_uvloop.py
